update jwt feature, update entity